View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027305 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-03-25 14:01 | 2016-04-20 15:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027305: Using undefined variables, which causes devide by zero | ||||
Description | in integration for #27190 there is incorrect using class math_FunctionSetRoot in method static Standard_Boolean DecomposeResult(...) math_FunctionSetRoot aSRF(aF, aTol); aSRF.Perform(aF, aStartPoint); The fields InfBounds and SupBounds are not initialized, but they are used in method Perform(...): InvLengthMax(i) = 1. / Max((theSupBound(i) - theInfBound(i))/4, 1.e-9); | ||||
Steps To Reproduce | Not required | ||||
Additional information and documentation updates | Use files from "signals.7z" attached archive in order to switch on FPE-signals. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
2016-03-25 15:47 developer |
signals.7z (17,183 bytes) |
|
Branch CR27305 has been created by nbv. SHA-1: 6f11a5c0f20524c8c9c36097c734cd1f8150b15b Detailed log of new commits: Author: nbv Date: Fri Mar 25 15:13:34 2016 +0300 0027305: Using undefined variables, which causes devide by zero Initialization of the boundaries of the function "FuncPreciseSeam" in IntPatch_ImpPrmIntersection.cxx Author: nbv Date: Fri Mar 25 13:39:57 2016 +0300 0027300: Boolean operation produces invalid shape in terms of "bopargcheck" command 1. Check, if value found by math_PSO algorithm cannot be precised by math_NewtonMinimum algorithm. In this case, we call math_PSO algorithm repeatedly, however, with other parameters. 2. Some margin of edge tolerance value has been provided in IntTools_Tools class. 3. Interface of math_NewtonMinimum class has been changed (method GetStatus() has been added). Correction of some test cases according to their new behavior. |
|
Branch CR27305_1 has been created by nbv. SHA-1: 2b63e648c7f0c0367ee76cc633971f40ce7cc0e0 Detailed log of new commits: Author: nbv Date: Fri Mar 25 15:57:49 2016 +0300 0027305: Using undefined variables, which causes devide by zero Initialization of the boundaries of the function "FuncPreciseSeam" in IntPatch_ImpPrmIntersection.cxx. |
|
Dear Mikhail, Please review CR27305_1 branch. |
|
Reviewed. |
|
Branch CR27305_1 has been updated forcibly by mkv. SHA-1: 28c29b944afe015b0cd686f8c13a3dfff9910b31 |
|
Dear BugMaster, Branch CR27305_1 was rebased on IR-2016-03-25 branch of occt git-repository. SHA-1: 28c29b944afe015b0cd686f8c13a3dfff9910b31 |
|
Dear BugMaster, Branch CR27305_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 28c29b944afe015b0cd686f8c13a3dfff9910b31 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 68 (68 on master) Windows: 0 (0 on master) MacOS : 1139 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 89237560 / 88959430 [+0.31%] Total CPU difference: 19425.140000000138 / 19420.20999999995 [+0.03%] products component : Total MEMORY difference: 25387850 / 25317639 [+0.28%] Total CPU difference: 5238.429999999994 / 5390.019999999992 [-2.81%] Testing on Windows: occt component : Total MEMORY difference: 57636728 / 57657712 [-0.04%] Total CPU difference: 18073.355454098895 / 18071.452241898907 [+0.01%] products component : Total MEMORY difference: 17895352 / 17862501 [+0.18%] Total CPU difference: 5166.2227165999575 / 5055.1188043999455 [+2.20%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR27305_1 is TESTED. |
|
Branch CR27305 has been deleted by kgv. SHA-1: 6f11a5c0f20524c8c9c36097c734cd1f8150b15b |
|
Branch CR27305_1 has been deleted by kgv. SHA-1: 28c29b944afe015b0cd686f8c13a3dfff9910b31 |
occt: master bf714c84 2016-03-25 12:57:49
Committer: bugmaster Details Diff |
0027305: Using undefined variables, which causes devide by zero Initialization of the boundaries of the function "FuncPreciseSeam" in IntPatch_ImpPrmIntersection.cxx. |
Affected Issues 0027305 |
|
mod - src/IntPatch/IntPatch_ImpPrmIntersection.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-03-25 14:01 |
|
New Issue | |
2016-03-25 14:01 |
|
Assigned To | => nbv |
2016-03-25 14:02 |
|
Relationship added | child of 0026329 |
2016-03-25 14:09 |
|
Status | new => assigned |
2016-03-25 15:47 |
|
File Added: signals.7z | |
2016-03-25 15:49 |
|
Additional Information Updated | |
2016-03-25 15:51 | git | Note Added: 0052018 | |
2016-03-25 15:59 | git | Note Added: 0052020 | |
2016-03-25 15:59 |
|
Note Added: 0052021 | |
2016-03-25 15:59 |
|
Assigned To | nbv => msv |
2016-03-25 15:59 |
|
Status | assigned => resolved |
2016-03-25 16:35 |
|
Note Added: 0052023 | |
2016-03-25 16:35 |
|
Assigned To | msv => bugmaster |
2016-03-25 16:35 |
|
Status | resolved => reviewed |
2016-03-25 17:13 |
|
Assigned To | bugmaster => mkv |
2016-03-25 17:35 | git | Note Added: 0052030 | |
2016-03-28 15:29 |
|
Note Added: 0052075 | |
2016-03-28 15:30 |
|
Note Added: 0052076 | |
2016-03-28 15:30 |
|
Note Added: 0052077 | |
2016-03-28 15:30 |
|
Assigned To | mkv => bugmaster |
2016-03-28 15:30 |
|
Status | reviewed => tested |
2016-03-28 15:30 |
|
Test case number | => Not needed |
2016-03-28 17:19 |
|
Product Version | Unscheduled => |
2016-03-28 17:19 |
|
Target Version | 7.1.0 => 7.0.0 |
2016-03-29 15:55 | bugmaster | Changeset attached | => occt master bf714c84 |
2016-03-29 15:55 | bugmaster | Status | tested => verified |
2016-03-29 15:55 | bugmaster | Resolution | open => fixed |
2016-04-17 13:27 | git | Note Added: 0052883 | |
2016-04-17 13:27 | git | Note Added: 0052884 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |