0027305: Using undefined variables, which causes devide by zero

Initialization of the boundaries of the function "FuncPreciseSeam" in IntPatch_ImpPrmIntersection.cxx.